0.0.11 (Pending)
* Changed: Stopped the generate task from depending on the module directory.

0.0.10 (October 9, 2010)
* Changed: Stop adding resources and test resources as dependencies. Resources are already
  added to classpath for compiling code and test resources are already added to the test
  classpath. 

0.0.9 (September 8, 2010)
* Changed: Stop using absolute paths in requires.

0.0.8 (July 15, 2010)
* Fixed: Build correct IML for a project which depends on another project's 
  test deps.
* Fixed: Build correct IML for a project which depends on a 
  directory-of-classes (vs. a jar).

0.0.7 (July 7, 2010)
* Fixed: Regression involving source and exclude paths for nested projects.

0.0.6 (July 5, 2010)
* Fixed: Correctly fixed the default value of iml.local_repository_env_override setting to
  match documentation.

0.0.5 (July 5, 2010)
* Changed: The documentation indicated that the iml.local_repository_env_override value
  defaulted to nil while the code defaulted the value to M2_REPO. The code was changed to
  Use $MAVEN_REPOSITORY$ to match the behaviour of IDEA 9.x.
* Added: Dependencies that are not in the maven repository or in projects where
  iml.local_repository_env_override is set nil will now have paths relative to the
  module directory.
* Added: Ability to disable generation of content section using iml.skip_content!
* Fixed: A project which is tagged with no_iml may have a child with an IML.
* Changed: Directories that are outside content dir are no longer excluded in the content
  section.
* Added: Automatic inclusion of source for IML dependencies if already
  downloaded.

0.0.4 (May 29, 2010)
* Added: Ability to disable ipr generation using project.no_ipr
* Added: Documented the ability to disable the generation of iml files via project.no_iml 